test/TestPhases/typechecker/invalid/CFunction_source.blc
@[CFunction (source = "foo.c")]
extern singleton function f () returns bool

@[EntryPoint]
activity Main ()
    _ = f()
    await true
end